tests/ui/missing-return.stderr
error: invalid function signature!
 --> $DIR/missing-return.rs:8:1
  |
8 | fn nothing() {}
  | ^^^^^^^^^^^^
