tests/ui/missing-return.rs
#[wll::setup]
fn setup() {}

#[wll::teardown]
fn teardown() {}

#[wll::export(do_nothing)]
fn nothing() {}

fn main() {}
